[tool.poetry]
name = "echo-tech"
version = "0.1.0"
description = ""
authors = ["Hadi Aji <hadeaji@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cv2-tools = "^2.4.0"
cv = "^1.0.0"
opencv-python = "^4.4.0"
opencv-contrib-python = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
